--- a/Pages/disaster/profile/inventory/Index.cshtml
+++ b/Pages/disaster/profile/inventory/Index.cshtml
@@ -103,7 +103,9 @@
 				<!-- Title and Add Button -->
 				<div class="row pb-2">
 					<div class="col-12 d-flex align-items-center justify-content-between">
-						<h1>Inventory</h1>
+						<div class="d-flex align-items-center">
+							<h1>Inventory</h1>
+						</div>
 
 						<div class="d-flex justify-content-end align-items-center">
 							<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/disaster/profile/inventory/add?centerLogID=@Model.logInfo.centerLogID">
