--- a/Pages/disaster/profile/reliefgoodspack/Index.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Index.cshtml
@@ -100,20 +100,25 @@
 					</nav>
 				</div>
 
-				<!-- Title and Add Button -->
-				<div class="row">
-					<div class="col d-flex align-items-center">
-						<h1>Relief Goods Pack</h1>
-					</div>
-					
-					<div class="col-auto d-flex justify-content-between align-items-center" style="gap: 5px">
-						<a class="btn btn-primary mb-2" href="/disaster/profile/reliefgoodspack/add?centerLogID=@Model.logInfo.centerLogID">
-							<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Pack
-						</a>
+				<div class="row pb-2">
+					<!-- Title and Add Button -->
+					<div class="col-12 d-flex justify-content-between align-items-center" style="gap: 30px">
+						<div class="d-flex align-items-center">
+							<h1>Relief Goods Pack</h1>
+						</div>
+
+						<div class="d-flex justify-content-end align-items-center">
+							<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/disaster/profile/reliefgoodspack/add?centerLogID=@Model.logInfo.centerLogID">
+								<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Pack
+							</a>
+							<a class="btn btn-primary mb-2 d-sm-none" href="/disaster/profile/reliefgoodspack/add?centerLogID=@Model.logInfo.centerLogID">
+								<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
+							</a>
+						</div>
 					</div>
 				</div>
-
-				<div class="row">
+				
+				<div class="row pb-2">
 					<div class="col-lg-12">
 						<table id="reliefpack-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
 							<thead>
