--- a/Pages/disaster/profile/staffassignment/Index.cshtml
+++ b/Pages/disaster/profile/staffassignment/Index.cshtml
@@ -109,11 +109,18 @@
 
 						<!-- Add and Mark Completed Buttons -->
 						<div class="col-auto d-flex justify-content-between align-items-center" style="gap: 5px">
-							<a id="addButton" class="btn btn-primary mb-2" href="/disaster/profile/staffassignment/add?centerLogID=@Model.logInfo.centerLogID">
+							<a id="addButton" class="btn btn-primary mb-2 d-none d-sm-inline" href="/disaster/profile/staffassignment/add?centerLogID=@Model.logInfo.centerLogID">
 								<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Assign Staff
 							</a>
-							<button style="display: none;" type="button" class="btn btn-danger mb-2" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
+							<a id="addButtonSmall" class="btn btn-primary mb-2 d-sm-none" href="/disaster/profile/staffassignment/add?centerLogID=@Model.logInfo.centerLogID">
+								<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
+							</a>
+
+							<button id="completeButton" style="display: none;" type="button" class="btn btn-danger mb-2 d-none d-sm-inline" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
 								<i class="bi bi-check-circle pt" style="padding: 5px;"></i> Mark Completed
+							</button>
+							<button id="completeButtonSmall" style="display: none;" type="button" class="btn btn-danger mb-2 d-sm-none" name="saveSelectionSmall" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
+								<i class="bi bi-check-circle pt" style="padding: 5px;"></i>
 							</button>
 						</div>
 					</div>
@@ -353,7 +360,6 @@
 	$(document).ready(function () {
 		var table = $('#assignment-table').DataTable({
 			responsive: true,
-			select: true, // select for checkbox
 			columnDefs: [
 				{ "orderable": true, "targets": [1] }, // Sortable columns
 				{ "orderable": false, "targets": [0, 2, 3, 4, 5] }, // Non-sortable columns
@@ -401,6 +407,7 @@
 	const selectAllCheckbox = document.getElementById('selectAllCheckboxes');
 	const checkboxes = document.querySelectorAll('input[name="selectedStaff[]"]');
 	const saveSelectionButton = document.querySelector('button[name="saveSelection"]');
+	const saveSelectionButtonSmall = document.querySelector('button[name="saveSelectionSmall"]');
 
 	// Event listener for the "Select All" checkbox
 	selectAllCheckbox.addEventListener('change', function () {
@@ -428,15 +435,29 @@
 			.filter(checkbox => !checkbox.disabled)
 			.some(checkbox => checkbox.checked);
 
-		const completeButton = document.querySelector('button[name="saveSelection"]');
+		const completeButton = document.getElementById('completeButton');
+		const completeButtonSmall = document.getElementById('completeButtonSmall');
 		const addButton = document.getElementById('addButton');
+		const addButtonSmall = document.getElementById('addButtonSmall');
 
 		if (atLeastOneEnabledCheckboxChecked) {
 			completeButton.style.display = 'block'; // Show the "Check-out Evacuee" button
 			addButton.style.display = 'none'; // Hide the "Check-in Evacuee" button
+			if (addButtonSmall) {
+				addButtonSmall.style.display = 'none'; // Hide the "Small Check-in Evacuee" button if it exists
+			}
+			if (completeButtonSmall) {
+				completeButtonSmall.style.display = 'block'; // Show the "Small Check-out Evacuee" button if it exists
+			}
 		} else {
 			completeButton.style.display = 'none'; // Hide the "Check-out Evacuee" button
 			addButton.style.display = 'block'; // Show the Check-in Evacuee button
+			if (addButtonSmall) {
+				addButtonSmall.style.display = 'block'; // Show the "Small Check-in Evacuee" button if it exists
+			}
+			if (completeButtonSmall) {
+				completeButtonSmall.style.display = 'none'; // Hide the "Small Check-out Evacuee" button if it exists
+			}
 		}
 	}
 
@@ -459,6 +480,9 @@
 			.filter(checkbox => !checkbox.disabled)
 			.some(checkbox => checkbox.checked);
 		saveSelectionButton.disabled = !atLeastOneEnabledCheckboxChecked;
+		if (saveSelectionButtonSmall) {
+			saveSelectionButtonSmall.disabled = !atLeastOneEnabledCheckboxChecked;
+		}
 	}
 </script>
 
