--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -72,7 +72,7 @@
 	<!-- Title and Add Button -->
 	<div class="row p-2">
 		<div class="col-12 d-flex align-items-center justify-content-between">
-			<h1><i class="bi bi-people-fill"></i>Family</h1>
+			<h1><i class="bi bi-people-fill" style="padding: 0 5px 0 5px;"></i>Family</h1>
 			<div class="d-flex justify-content-end align-items-center">
 				<a class="btn btn-primary mb-2 button-spacing d-none d-sm-inline" href="/family">
 					<i class="bi bi-box-arrow-down"></i> Import .CSV File
