--- a/Pages/Inventory/Index.cshtml
+++ b/Pages/Inventory/Index.cshtml
@@ -17,7 +17,7 @@
 <!-- Title and Add Button-->
 <div class="row mb-2">
     <div class="col-12 d-flex align-items-center justify-content-between">
-        <h1><i class="bi bi-person-lines-fill" style="padding: 0 5px 0 5px;"></i>Inventory</h1>
+        <h1><i class="bi bi-box-fill" style="padding: 0 5px 0 5px;"></i>Inventory</h1>
     </div>
 </div>
 
