--- a/Pages/evacuationcenter/Index.cshtml
+++ b/Pages/evacuationcenter/Index.cshtml
@@ -56,7 +56,7 @@
 <!-- Title and Add Button-->
 <div class="row mb-2">
 	<div class="col-12 d-flex align-items-center justify-content-between">
-		<h1><i class="bi bi-person-lines-fill" style="padding: 0 5px 0 5px;"></i>Evacuation Center</h1>
+		<h1><i class="bi bi-building-fill" style="padding: 0 5px 0 5px;"></i>Evacuation Center</h1>
 
 		<div class="d-flex justify-content-end align-items-center">
 			<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/evacuationcenter/add">
