Customized the div in the shared layout for the dashboard slider.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -69,182 +69,166 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed; /* This ensures the background image stays fixed when scrolling */
-        margin: 0; /* Remove default body margin */
-        padding: 0; /* Remove default body padding */
-        height: 100vh;
-    }
-
-    .container {
-        position: relative;
-        z-index: 1;
     }
 </style>
 
 
-<html>
-    <head>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <!--LINKS-->
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
+<!--LINKS-->
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-        <!--MAIN-->
-   
-        <section class="container-slide">
-            <div class="slider-wrapper">
-                <div class="slider" id="imageSlider">
-                <img id="slide-1" src="/images/ec1img.jpg" alt="EC 1 Image" >
+<!--MAIN-->
+@section Dashboard {
+    <section class="container-slide pt-5">
+        <div class="slider-wrapper">
+            <div class="slider" id="imageSlider">
+                <img id="slide-1" src="/images/ec1img.jpg" alt="EC 1 Image">
                 <img id="slide-2" src="/images/ec2img.jpg" alt="EC 2 Image">
                 <img id="slide-3" src="/images/ec3img.jpg" alt="EC 3 Image">
-                </div>
-                <div class="slider-nav">
-                    <a href="#slide-1"></a>
-                    <a href="#slide-2"></a>
-                    <a href="#slide-3"></a>
-                </div>
             </div>
-        </section>
-   
-
-
-
-
-        <div class="container form-container1">
-            <div class="container form-container-content1">
-                <div class="row p-2">
-                    <div class="col d-flex align-items-center">
-                        <h1>@Model.disasterInfo.disasterName</h1>
-                    </div>
-
-                    <div class="col-auto button-spacer">
-                        <!-- Button with text and icon (visible on larger screens) -->
-                        <button id="toggleButton" class="btn d-none d-md-inline-block"
-                            onclick="showInfo('@Model.disasterInfo.disasterType', '@Model.disasterInfo.description', '@Model.disasterInfo.dateOccured')"
-                            data-bs-toggle="modal" data-bs-target="#infoModal">
-                            <i class="bi bi-info-circle-fill"></i> Info
-                        </button>
-
-                        <!-- Button with icon only (visible on smaller screens) -->
-                        <button id="toggleButtonMobile" class="btn d-inline-block d-md-none"
-                            onclick="showInfo('@Model.disasterInfo.disasterType', '@Model.disasterInfo.description', '@Model.disasterInfo.dateOccured')"
-                            data-bs-toggle="modal" data-bs-target="#infoModal">
-                            <i class="bi bi-info-circle-fill"></i>
-                        </button>
-
-                        <!-- Button with text and icon (visible on larger screens) -->
-                        <a id="toggleButton" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-none d-md-inline-block position-relative" role="button">
-                            View More <i class="bi bi-arrow-right-circle"></i>
-                        </a>
-
-                        <!-- Button with text and icon (visible on smaller screens) -->
-                        <a id="toggleButtonMobile" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-inline-block d-md-none" role="button">
-                            <i class="bi bi-arrow-right-circle"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="dashcontent">
-                <div class="boxinfo">
-                    <div class="infoitem">
-                        <i class="bi bi-people"></i>
-                        <div class="text">
-                            <h3 class="dashtitle">@Model.GetTotalDistinctEvacueesCount(Model.disasterInfo.disasterID)</h3>
-                            <p><b>Total Evacuees</b></p>
-                            <div class="box-stat">
-                                <small>Check-in: <span>@Model.GetTotalCheckInCount(Model.disasterInfo.disasterID)</span></small>
-                            <small>Check-out: <span>@Model.GetTotalCheckOutCount(Model.disasterInfo.disasterID)</span></small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="infoitem">
-                    <i class="bi bi-buildings-fill"></i>
-                        <div class="text">
-                            <h3 class="dashtitle">@Model.GetTotalDistinctBarangaysCount(Model.disasterInfo.disasterID)</h3>
-                            <p><b>Total Affected Brgys</b></p>
-                            <div class="box-stat">
-                                <small>Families: <span>@Model.GetTotalDistinctFamiliesCount(Model.disasterInfo.disasterID)</span></small>
-                                <small>Male: <span>@Model.GetTotalDistinctFemaleCount(Model.disasterInfo.disasterID)</span></small>
-                                <small>Female: <span>@Model.GetTotalDistinctMaleCount(Model.disasterInfo.disasterID)</span></small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="infoitem">
-                        <i class="bi bi-building-fill"></i>
-                        <div class="text">
-                            <h3 class="dashtitle">@Model.GetTotalCenterCount(Model.disasterInfo.disasterID)</h3>
-                            <p><b>Total Evacuation Centers</b></p>
-                            <div class="box-stat">
-                                <small>Open: <span>@Model.GetTotalOpenCenterCount(Model.disasterInfo.disasterID)</span></small>
-                                <small>Closed: <span>@Model.GetTotalClosedCenterCount(Model.disasterInfo.disasterID)</span></small>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
+            <div class="slider-nav">
+                <a href="#slide-1"></a>
+                <a href="#slide-2"></a>
+                <a href="#slide-3"></a>
             </div>
         </div>
+    </section>
+}
 
-        <div class="container form-container1">
-            <div class="container form-container-content1">
-                <div>
-                    <h2>Evacuation Center</h2>
-                </div>
+<div class="container form-container1">
+    <div class="container form-container-content1">
+        <div class="row p-2">
+            <div class="col d-flex align-items-center">
+                <h1>@Model.disasterInfo.disasterName</h1>
             </div>
 
-            <!-- Table -->
-            <div class="row p-2">
-                <div class="col-lg-12">
-                    <div class="container table-container">
-                        <table id="ec" class="table display compact order-column table-hover" cellspacing="0" width="100%">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>Name</th>
-                                    <th>Barangay</th>
-                                    <th>Occupancy</th>
-                                    <th>Status</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @{ var counter = 1; }
-                                @foreach (var item in Model.listCenterLog)
-                                {
-                                    <tr>
-                                        <td width="5%">@counter</td>
-                                        <td width="25%">@item.centerName</td>
-                                        <td width="25%" style="text-align: center;">@item.barangayName</td>
-                                        <td width="30%" style="text-align: center;">
-                                            <div class="progress-container">
-                                                <!-- Progress bar will be added dynamically here -->
-                                            </div>
-                                            <span class="occupancy-text">@item.occupancy/@item.maxCapacity</span>
-                                        </td>
-                                        <td width="15%" style="text-align: center;">
-                                            @if (@item.status == "Open")
-                                            {
-                                                <span class="badge bg-success">@item.status</span>
-                                            }
-                                            else if (@item.status == "Closed")
-                                            {
-                                                <span class="badge rounded-pill bg-light">@item.status</span>
-                                            }
-                                        </td>
-                                    </tr>
-                                    counter++;
-                                }
-                            </tbody>
-                        </table>
+            <div class="col-auto button-spacer">
+                <!-- Button with text and icon (visible on larger screens) -->
+                <button id="toggleButton" class="btn d-none d-md-inline-block"
+                        onclick="showInfo('@Model.disasterInfo.disasterType', '@Model.disasterInfo.description', '@Model.disasterInfo.dateOccured')"
+                        data-bs-toggle="modal" data-bs-target="#infoModal">
+                    <i class="bi bi-info-circle-fill"></i> Info
+                </button>
+
+                <!-- Button with icon only (visible on smaller screens) -->
+                <button id="toggleButtonMobile" class="btn d-inline-block d-md-none"
+                        onclick="showInfo('@Model.disasterInfo.disasterType', '@Model.disasterInfo.description', '@Model.disasterInfo.dateOccured')"
+                        data-bs-toggle="modal" data-bs-target="#infoModal">
+                    <i class="bi bi-info-circle-fill"></i>
+                </button>
+
+                <!-- Button with text and icon (visible on larger screens) -->
+                <a id="toggleButton" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-none d-md-inline-block position-relative" role="button">
+                    View More <i class="bi bi-arrow-right-circle"></i>
+                </a>
+
+                <!-- Button with text and icon (visible on smaller screens) -->
+                <a id="toggleButtonMobile" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-inline-block d-md-none" role="button">
+                    <i class="bi bi-arrow-right-circle"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="dashcontent">
+        <div class="boxinfo">
+            <div class="infoitem">
+                <i class="bi bi-people"></i>
+                <div class="text">
+                    <h3 class="dashtitle">@Model.GetTotalDistinctEvacueesCount(Model.disasterInfo.disasterID)</h3>
+                    <p><b>Total Evacuees</b></p>
+                    <div class="box-stat">
+                        <small>Check-in: <span>@Model.GetTotalCheckInCount(Model.disasterInfo.disasterID)</span></small>
+                        <small>Check-out: <span>@Model.GetTotalCheckOutCount(Model.disasterInfo.disasterID)</span></small>
                     </div>
                 </div>
             </div>
+
+            <div class="infoitem">
+                <i class="bi bi-buildings-fill"></i>
+                <div class="text">
+                    <h3 class="dashtitle">@Model.GetTotalDistinctBarangaysCount(Model.disasterInfo.disasterID)</h3>
+                    <p><b>Total Affected Brgys</b></p>
+                    <div class="box-stat">
+                        <small>Families: <span>@Model.GetTotalDistinctFamiliesCount(Model.disasterInfo.disasterID)</span></small>
+                        <small>Male: <span>@Model.GetTotalDistinctFemaleCount(Model.disasterInfo.disasterID)</span></small>
+                        <small>Female: <span>@Model.GetTotalDistinctMaleCount(Model.disasterInfo.disasterID)</span></small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="infoitem">
+                <i class="bi bi-building-fill"></i>
+                <div class="text">
+                    <h3 class="dashtitle">@Model.GetTotalCenterCount(Model.disasterInfo.disasterID)</h3>
+                    <p><b>Total Evacuation Centers</b></p>
+                    <div class="box-stat">
+                        <small>Open: <span>@Model.GetTotalOpenCenterCount(Model.disasterInfo.disasterID)</span></small>
+                        <small>Closed: <span>@Model.GetTotalClosedCenterCount(Model.disasterInfo.disasterID)</span></small>
+                    </div>
+                </div>
+            </div>
+
         </div>
-    </body>
-</html>
+    </div>
+</div>
+
+<div class="container form-container1">
+    <div class="container form-container-content1">
+        <div>
+            <h2>Evacuation Center</h2>
+        </div>
+    </div>
+
+    <!-- Table -->
+    <div class="row p-2">
+        <div class="col-lg-12">
+            <div class="container table-container">
+                <table id="ec" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Name</th>
+                            <th>Barangay</th>
+                            <th>Occupancy</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @{
+                            var counter = 1;
+                        }
+                        @foreach (var item in Model.listCenterLog)
+                        {
+                            <tr>
+                                <td width="5%">@counter</td>
+                                <td width="25%">@item.centerName</td>
+                                <td width="25%" style="text-align: center;">@item.barangayName</td>
+                                <td width="30%" style="text-align: center;">
+                                    <div class="progress-container">
+                                        <!-- Progress bar will be added dynamically here -->
+                                    </div>
+                                    <span class="occupancy-text">@item.occupancy/@item.maxCapacity</span>
+                                </td>
+                                <td width="15%" style="text-align: center;">
+                                    @if (@item.status == "Open")
+                                    {
+                                        <span class="badge bg-success">@item.status</span>
+                                    }
+                                    else if (@item.status == "Closed")
+                                    {
+                                        <span class="badge rounded-pill bg-light">@item.status</span>
+                                    }
+                                </td>
+                            </tr>
+                            counter++;
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <script>
