--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -70,7 +70,9 @@
         </div>
     </nav>
 
-    <main role="main" class="pt-5 pb-5">
+    @RenderSection("dashboard", required: false)
+
+    <main role="main" class="container pt-5 pb-5">
         @RenderBody()
     </main>
 
